syntax = "proto3";

option csharp_namespace = "BlazorGatewayAPI.Grpc";

service Courses {
  // Курсы
  rpc CreateCourse (CourseRequest) returns (Course);
  rpc GetCourse (GetByIdRequest) returns (Course);
  rpc UpdateCourse (CourseRequest) returns (Course);
  rpc DeleteCourse (GetByIdRequest) returns (Empty);

  // Объекты 
  rpc CreateCourseItem (CourseItemRequest) returns (CourseItem);
  rpc GetCourseItem (GetByIdRequest) returns (CourseItem);
  rpc UpdateCourseItem (CourseItemRequest) returns (CourseItem);
  rpc DeleteCourseItem (GetByIdRequest) returns (Empty);

  // Контент
  rpc CreateContent (ContentRequest) returns (Content);
  rpc GetContent(GetByIdRequest) returns (Content);
  rpc UpdateContent (ContentRequest) returns (Content);
  rpc DeleteContent (GetByIdRequest) returns (Empty);

}

message Course {
    string id = 1; 
    string title = 2;
    string description = 3;
    repeated string course_items_ids = 4;
}
message Content {
    string id = 1;
    string type = 2;
    string data = 3;
    int32 order = 4;
    string course_item_id = 5;
}
message CourseMetadata {
    string id = 1;
    bool is_deleted = 2;
    string preview_image_url = 3;
    string duration = 4;
}
message CourseItem {
    string id = 1;
    string course_id = 2;
    optional string parent_id = 3;
    string title = 4;
    string type = 5;
    repeated string children_ids = 6;
    repeated string contents_ids = 7;
    int32 order = 8;

}
message Empty {}

message GetByIdRequest {
  string id = 1;
}
message CourseRequest {
  string id = 1; //Если есть
  string title = 2;
  string description = 3;
  CourseMetadataRequest course_metadata = 4;
}
message CourseMetadataRequest {
    bool is_deleted = 1;
    string image = 2;
    string duration = 3;
}
message CourseItemRequest {
  string id = 1; //Если есть
  string course_id = 2;
  string parent_id = 3;
  string type = 4;
  string title = 5;
  repeated string contents_ids = 6;
}
message ContentRequest {
  string id = 1; //Если есть
  string course_item_id = 2;
  string type = 3;
  string data = 4;
  int32 order = 5;
}
